repackage to io.avaje.logging.slf4j